# llvm-ai

./: .gitignore  CMakeLists.txt  LicenseAgreement.md  README.MD  README.md  init.py  init_repo.py  llvm_vsa_static.diff  run.py
benchmark/: CMakeLists.txt
comparison/: 20181115-widening  20181115warrowing
lib/Analysis/RelationalAnalysis/: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/Analysis/RelationalAnalysis/docs/: presentation  presentation_outline.txt
lib/Analysis/RelationalAnalysis/samples/: AddSubMulDiv.c  If.c  basic.c  basicEqualitiesTest.c  basic_loop.c  deadBranchTest.c  fibonacci.c  forModulo.c  generateCFG.sh  leastUpperBoundTest.c  phi_basic.c  recursive.c  run.sh  run_dot.sh  simpleNestedFor.c  whileDoesntTerminate.c  whileTerminates.c
lib/Analysis/RelationalAnalysis/src/: BasicRelationalAnalysisPass.cpp  BlockManager.cpp  BlockManager.h  globals.cpp  globals.h  util.h
lib/Analysis/RelationalAnalysis/src/common/: AbstractDomain.h  BbSorter.h  BbWorklist.cpp  BbWorklist.h  ClassType.h  Constant.cpp  Constant.h  InstructionVisitor.cpp  InstructionVisitor.h  Invariant.cpp  Invariant.h  Representative.cpp  Representative.h  RepresentativeCompare.h  RepresentativeHasher.cpp  RepresentativeHasher.h  State.cpp  State.h  Variable.cpp  Variable.h
lib/Analysis/RelationalAnalysis/src/domains/: EqualityDomain.cpp  EqualityDomain.h
lib/Analysis/RelationalAnalysis/src/dotprinter/: CustomGraphWriter.h  DotPrinter.cpp  DotPrinter.h
lib/Analysis/RelationalAnalysis/test/: CMakeLists.txt  EqualityDomainTest.cpp
samples/: add-1.c  add-2.c  add-3.c  (+47 more)
(+78 files in other folders)
